# Proga_Sem2

./: Lab7.md  file  file.c  file_text.txt  jggj.  laba7.md
Lab1_Sem2/: file  file.c
Lab2_Sem2/: file  file.c
Lab5_Sem2/: file
Lab6_Sem2/: dynamic_exe  file.c  for_func.c  hki.h  main_func.c  static_exe
Lab8_Sem2/: FileForFour.c  FileThree.c  file  file.c  fileforfour.py  results.csv
Lab9_Sem2/: math_operations.c  math_operations.h  test_math_operations.c  test_program
RGR_VAR6/: CMakeLists.txt
RGR_VAR6/APP/: CMakeLists.txt  main.c
RGR_VAR6/CEZAR/: CEZAR.c  CEZAR.h  CMakeLists.txt
RGR_VAR6/TESTs/: CMakeLists.txt  run_tests.c  test_cezar.c  test_cezar.h
RGR_VAR6/evo/: cezar.c  decezar.c  my_cezar_app
